--- a/dmca.html
+++ b/dmca.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-		<title>geometry-dash-online</title>
-				<meta name="description" content="geometry-dash-online">
+		<title>DMCA</title>
+				<meta name="description" content="xxx">
 						<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
 		<link rel="stylesheet" type="text/css" href="css/jquery-comments.css" />
 		<link rel="stylesheet" type="text/css" href="css/user.css" />
@@ -28,7 +28,7 @@
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav-menu" aria-controls="nav-menu" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
-				<a class="navbar-brand js-scroll-trigger" href="/"><img src="images/geometry-dash-online_logo.png" width="70" height="35" class="site-logo" alt="site-logo"></a>
+				<a class="navbar-brand js-scroll-trigger" href="/"><img src="images/xxx_logo.png" width="70" height="35" class="site-logo" alt="site-logo"></a>
 	
 
 				<div class="navbar-collapse collapse" id="nav-menu">
@@ -38,33 +38,8 @@
 				</div>
 				<div class="d-none d-lg-block">
 			
-        <ul class="navbar-nav">
-            <li class="nav-item "><a class="nav-link " href="/category/car.html">Car</a></li>
-            <li class="nav-item "><a class="nav-link " href="/category/racing.html">Racing</a></li>
-            <li class="nav-item "><a class="nav-link " href="/category/skill.html">Skill</a></li>
-            <li class="nav-item "><a class="nav-link " href="/category/sports.html">Sports</a></li>
-            <li class="nav-item "><a class="nav-link " href="/category/running.html">Running</a></li>
-            
-            <li class="nav-item "><a class="nav-link " href="/category/puzzle.html">Puzzle</a></li>
-
-            <li class="nav-item "><a class="nav-link " href="/category/2-player.html">2 Player</a></li>
-
-        
 
 
-            <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">More</a>
-              <ul role="menu" class="dropdown-menu">
-                <li><a class="dropdown-item" href="/category/3d.html">3D</a></li>
-                <li><a class="dropdown-item" href="/category/shooting.html">Shooting</a></li>
-                <li><a class="dropdown-item" href="/category/moto.html">Moto</a></li>
-                <li><a class="dropdown-item" href="/category/stickman.html">Stickman</a></li>
-                <li><a class="dropdown-item" href="/category/adventure.html">Adventure</a></li>
-                <li><a class="dropdown-item" href="/category/multiplayer.html">Multiplayer</a></li>
-
-            </ul>
-            </li>
-
-          </ul>
 
 
 
@@ -105,35 +80,35 @@
                         <h1 class="text-base md:text-lg 2xl:text-xl font-semibold tracking-tight italic">Last Updated: 
                         <!-- -->
                         August 18, 2023</h1>
-                        <p class="pb-4">geometry-dash-online.github.io
+                        <p class="pb-4">xxx.github.io
                         <!-- -->
                         (the &quot;Site &quot;) respects the intellectual property rights of others and expects its users to do the same. In accordance with the Digital Millennium Copyright Act of 1998, the text of which may be found on the U.S. Copyright Office website at http://www.copyright.gov/legislation/dmca.pdf, and specifically in accordance with 17 USC § 512(c)(3), 
                         <!-- -->
-                        geometry-dash-online.github.io
+                        xxx.github.io
                         <!-- -->
                         will respond expeditiously to claims of copyright infringement committed using the 
                         <!-- -->
-                        geometry-dash-online.github.io
+                        xxx.github.io
                         <!-- -->
                         service and/or any
                         <!-- -->
                         <!-- -->
-                        geometry-dash-online.github.io
+                        xxx.github.io
                         <!-- -->
                         website (the &quot;Site &quot;) if such claims are reported to 
                         <!-- -->
-                        geometry-dash-online.github.io
+                        xxx.github.io
                         <!-- -->
                         &#x27;s Designated Email identified below.</p>
                         <h1 class="text-lg md:text-xl 2xl:text-2xl font-semibold tracking-tight">DMCA Notice of Alleged Infringement (&quot;Notice &quot;)</h1>
                         <p class="pb-4">If you are a copyright owner, authorized to act on behalf of one, or authorized to act under any exclusive right under copyright, please report alleged copyright infringements taking place on or through the Site by completing a DMCA Notice of Alleged Infringement and delivering it to 
                         <!-- -->
-                        geometry-dash-online.github.io
+                        xxx.github.io
                         <!-- -->
                         &#x27;s Designated Email. Upon receipt of Notice as described below,
                         <!-- -->
                         <!-- -->
-                        geometry-dash-online.github.io
+                        xxx.github.io
                         <!-- -->
                         will take whatever action, in its sole discretion, it deems appropriate, including removal of the challenged content from the Site. Please note that if you fail to comply with all of the requirements of this section and of 17 USC § 512(c)(3) your DMCA notice may not be valid.</p>
                         <ul class="list-disc list-inside">
@@ -149,11 +124,11 @@
                             <li>Deliver this Notice, with all items completed, to
                             <!-- -->
                             <!-- -->
-                            geometry-dash-online.github.io
+                            xxx.github.io
                             <!-- -->
                             &#x27;s Designated Email: 
                             <!-- -->
-                            geometry-dash-onlinecontact
+                            topvazcontact
                             <!-- -->
                             @gmail.com</li>
                         </ul>
@@ -189,7 +164,7 @@
 
 	<div class="footer-copyright py-4">
 		<div class="container">
-			geometry-dash-online.github.io			<span class="dsb-panel">
+			xxx.github.io			<span class="dsb-panel">
 				<a href="dmca.html">DMCA</a>			</span>
 		</div>
 	</div>
