--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-		<title>gameName Unblocked - fullscreen, No Ads</title>
-				<meta name="description" content="gameName Unblocked, fullscreen, ad-free, No Download">
+		<title>Paper io 2 Unblocked - fullscreen, No Ads</title>
+				<meta name="description" content="Paper io 2 Unblocked, fullscreen, ad-free, No Download">
 						<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
 		<link rel="stylesheet" type="text/css" href="css/jquery-comments.css" />
 		<link rel="stylesheet" type="text/css" href="css/user.css" />
@@ -31,7 +31,7 @@
 				</button>
 				<a class="navbar-brand js-scroll-trigger" href="/">
           <!-- <img src="images/logo.webp" style="width:40px; height:36px" class="site-logo" alt="site-logo"> -->
-          xxx.github.io
+          paperio2.github.io
         </a>
 	
 
@@ -43,12 +43,12 @@
 				<div class="d-none d-lg-block">
 			
         <ul class="navbar-nav">
-            <li class="nav-item "><a rel="nofollow" target="_blank" class="nav-link " href="https://2-player.github.io/">2 Player</a></li>
+            <li class="nav-item "><a rel="nofollow" target="_blank" class="nav-link " href="https://paperioonline.github.io/">Paper io Unblocked</a></li>
             <li class="nav-item "><a rel="nofollow" target="_blank" class="nav-link " href="https://geometry-dash-online.github.io/">Geometry Dash</a></li>
             <li class="nav-item "><a rel="nofollow" target="_blank" class="nav-link " href="https://wordle-unlimited.github.io/">Wordle Unlimited</a></li>
             <!-- <li class="nav-item "><a rel="nofollow" target="_blank" class="nav-link " href="https://basketrandomonline.github.io/">Basket Random</a></li> -->
-            <li class="nav-item "><a rel="nofollow" target="_blank" class="nav-link " href="https://1v1lolonline.github.io/">1v1 LOL</a></li>            
-            <li class="nav-item "><a rel="nofollow" target="_blank" class="nav-link " href="https://motox3monline.github.io/">Moto X3M</a></li>            
+<!--             <li class="nav-item "><a rel="nofollow" target="_blank" class="nav-link " href="https://1v1lolonline.github.io/">1v1 LOL</a></li>            
+            <li class="nav-item "><a rel="nofollow" target="_blank" class="nav-link " href="https://motox3monline.github.io/">Moto X3M</a></li>     -->        
             <!-- <li class="nav-item "><a rel="nofollow" target="_blank" class="nav-link " href="https://paperio2.github.io">Paper io 2</a></li>             -->
           </ul>
 
@@ -148,9 +148,9 @@
 	<a href="/play/gameId.html">
 	<div class="game-item">
 		<div class="list-game">
-			<div class="list-thumbnail"><img src="imgLink" data-src="imgLink" class="small-thumb img-rounded lazyload" alt="gameName"></div>
+			<div class="list-thumbnail"><img src="imgLink" data-src="imgLink" class="small-thumb img-rounded lazyload" alt="Paper io 2"></div>
 			<div class="list-info">
-				<div class="list-title">gameName</div>
+				<div class="list-title">Paper io 2</div>
 			</div>
 		</div>
 	</div>
@@ -199,9 +199,9 @@
 		<a href="/play/gameId.html">
 		<div class="game-item">
 			<div class="list-game">
-				<div class="list-thumbnail"><img src="imgLink" data-src="imgLink" class="small-thumb img-rounded lazyload" alt="gameName"></div>
+				<div class="list-thumbnail"><img src="imgLink" data-src="imgLink" class="small-thumb img-rounded lazyload" alt="Paper io 2"></div>
 				<div class="list-info">
-					<div class="list-title">gameName</div>
+					<div class="list-title">Paper io 2</div>
 					<div class="list-category">gameCategory</div>
 		
 
@@ -239,7 +239,7 @@
 
  
 
-
+<!-- 
   <div class="col-lg-4 col-md-6 grid-2">
     <a rel="nofollow" target="_blank" href="https://motox3monline.github.io/">
     <div class="game-item">
@@ -255,16 +255,16 @@
     </div>
     </a>
   </div>  
-
+ -->
 
   <div class="col-lg-4 col-md-6 grid-2">
-    <a rel="nofollow" target="_blank" href="https://1v1lolonline.github.io/">
+    <a rel="nofollow" target="_blank" href="https://slop2.github.io/">
     <div class="game-item">
       <div class="list-game">
-        <div class="list-thumbnail"><img src="https://topvazstore.github.io/img/1v1-lol.png" class="small-thumb img-rounded lazyload" alt="1v1 LOL"></div>
+        <div class="list-thumbnail"><img src="https://topvazstore.github.io/img/slope-2.png" class="small-thumb img-rounded lazyload" alt="Slope 2"></div>
         <div class="list-info">
-          <div class="list-title">1v1 LOL</div>
-          <div class="list-category">Shooting</div>
+          <div class="list-title">Slope 2</div>
+          <div class="list-category">Running</div>
     
 
         </div>
@@ -274,7 +274,7 @@
   </div>  
 
 
- 
+<!--  
   <div class="col-lg-4 col-md-6 grid-2">
     <a rel="nofollow" target="_blank" href="https://basketrandomonline.github.io/">
     <div class="game-item">
@@ -288,7 +288,7 @@
     </div>
     </a>
   </div>  
-
+ -->
 
   
   <div class="col-lg-4 col-md-6 grid-2">
@@ -305,7 +305,7 @@
     </a>
   </div>  
 
-  
+<!--   
   <div class="col-lg-4 col-md-6 grid-2">
     <a rel="nofollow" target="_blank" href="https://smashkartsonline.github.io/">
     <div class="game-item">
@@ -319,6 +319,8 @@
     </div>
     </a>
   </div>  
+
+   -->
 <!-- 
   <div class="col-lg-4 col-md-6 grid-2">
     <a rel="nofollow" target="_blank" href="https://paperio2.github.io/">
@@ -353,7 +355,7 @@
 
 
 	<!-- Random games section -->
-	<h3 class="section-title">You may like</h3>
+	<!-- <h3 class="section-title">You may like</h3> -->
 	<div class="row grid-container">
 					
 
@@ -364,9 +366,9 @@
 	<a href="/go/gameId.html">
 	<div class="game-item">
 		<div class="list-game">
-			<div class="list-thumbnail"><img src="imgLink" data-src="imgLink" class="lazyload" alt="gameName"></div>
+			<div class="list-thumbnail"><img src="imgLink" data-src="imgLink" class="lazyload" alt="Paper io 2"></div>
 			<div class="list-info">
-				<div class="list-title">gameName</div>
+				<div class="list-title">Paper io 2</div>
 			</div>
 		</div>
 	</div>
