--- a/index.html
+++ b/index.html
@@ -28,41 +28,6 @@
 </head>
 
 <body id="page-top" style="background: url('images/background1.png'); background-size: cover;">
-
-	<!-- Navigation -->
-	<nav class="navbar navbar-expand-lg navbar-dark top-nav" id="mainNav">
-		<div class="container">
-			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav-menu" aria-controls="nav-menu" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<a class="navbar-brand js-scroll-trigger" href="/">
-				<strong>goblinkingdev.github.io/paperio-2-unblocked.github.io/</strong>
-			</a>
-			<div class="navbar-collapse collapse" id="nav-menu">
-				<ul class="navbar-nav">
-					<li class="nav-item"><a class="nav-link" href="/category/car.html">Car</a></li>
-					<li class="nav-item"><a class="nav-link" href="/category/sports.html">Sports</a></li>
-					<li class="nav-item"><a class="nav-link" href="/category/skill.html">Skill</a></li>
-					<li class="nav-item"><a class="nav-link" href="/category/running.html">Running</a></li>
-					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">More</a>
-						<ul role="menu" class="dropdown-menu">
-							<li><a class="dropdown-item" href="/category/3d.html">3D</a></li>
-							<li><a class="dropdown-item" href="/category/shooting.html">Shooting</a></li>
-							<li><a class="dropdown-item" href="/category/multiplayer.html">Multiplayer</a></li>
-							<li><a class="dropdown-item" href="/category/racing.html">Racing</a></li>
-							<li><a class="dropdown-item" href="/category/moto.html">Moto</a></li>
-							<li><a class="dropdown-item" href="/category/stickman.html">Stickman</a></li>
-							<li><a class="dropdown-item" href="/category/adventure.html">Adventure</a></li>
-							<li><a class="dropdown-item" href="/category/puzzle.html">Puzzle</a></li>
-							<li><a class="dropdown-item" href="/category/new.html">New</a></li>
-						</ul>
-					</li>
-				</ul>
-			</div>
-		</div>
-	</nav>
-
 	<!-- Game Container -->
 	<div class="container">
 		<div class="row">
@@ -75,7 +40,7 @@
 							<div id="mobile-back-button" draggable="true">
 								<i class="bi bi-x-circle-fill"></i>
 							</div>
-							<iframe class="game-iframe" id="game-area" src="file/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen></iframe>
+							<iframe class="game-iframe" id="game-area" src="file/" scrolling="none" frameborder="0" allowfullscreen></iframe>
 						</div>
 					</div>
 
@@ -92,58 +57,7 @@
 					</div>
 				</div>
 			</div>
-
-			<!-- Sidebar with Game Suggestions -->
-			<div class="col-md-2 text-center">
-				<div class="game-suggestions">
-					<a href="go/retro-bowl.html" title="Retro Bowl">
-						<img src="https://topvazstore.github.io/img/retro-bowl.png" class="small-thumb img-rounded" alt="Retro Bowl">
-					</a>
-					<a href="go/monkey-mart.html" title="Monkey Mart">
-						<img src="https://topvazstore.github.io/img/monkey-mart.png" class="small-thumb img-rounded" alt="Monkey Mart">
-					</a>
-					<a href="https://flappybirdgame.github.io" target="_blank" title="Flappy Bird">
-						<img src="https://topvazstore.github.io/img/flappy-bird.png" class="small-thumb img-rounded" alt="Flappy Bird">
-					</a>
-				</div>
-			</div>
 		</div>
-
-		<!-- Banner Ads -->
-		<div class="banner-ad-wrapper">
-			<div class="banner-ad-content" style="padding: 20px 0; text-align: center;">
-				<!-- Optional ads can be placed here -->
-			</div>
-		</div>
-
-		<!-- Similar Games Section -->
-		<h3 class="section-title">Similar Games</h3>
-		<div class="row grid-container">
-			<!-- Game Links (Use a loop to simplify repetitive code) -->
-			<div class="col-lg-2 col-md-4 col-6 grid-3">
-				<a href="/go/stick-merge.html">
-					<div class="game-item">
-						<img src="https://topvazstore.github.io/img/stick-merge.png" class="lazyload" alt="Stick Merge">
-					</div>
-				</a>
-			</div>
-			<!-- Repeat above div for each game -->
-		</div>
-
-		<!-- You May Like Section -->
-		<h3 class="section-title">You May Like</h3>
-		<div class="row grid-container">
-			<!-- Repeat similar game items for the "You May Like" section -->
-		</div>
-
-		<!-- Footer -->
-		<div class="footer-copyright py-4">
-			<div class="container">
-				<span>topVAZ</span> <span class="dsb-panel">topVAZ Games - <a href="/dmca.html">DMCA</a></span>
-			</div>
-		</div>
-	</div>
-
 	<!-- Scripts -->
 	<script src="js/jquery-3.6.2.min.js"></script>
 	<script src="js/lazysizes.min.js"></script>
