--- a/file/index.html
+++ b/file/index.html
@@ -5,10 +5,8 @@
     <meta name="theme-color" content="#2d3331" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <meta name="robots" content="noindex,nofollow" />
-    <title>Paper.io 2</title>
+    <title>Paper.io 2 Unblocked</title>
     <link rel="manifest" href="manifest.json" />
-    <link rel="icon" type="image/png" href="images/icon192.png" />
-    <link rel="shortcut icon" type="image/png" href="images/icon192.png" />
     <link rel="stylesheet" href="css/fonts.css" />
     <link rel="stylesheet" href="css/style3.css" />
   </head>
@@ -18,35 +16,27 @@
     <script type="text/javascript" src="js/loader.js"></script>
     <script type="text/javascript" src="js/app-new-gm.js?26"></script>
     <div id="game">
-      <canvas class="fadein" id="view" width="922" height="888"></canvas>
+      <canvas class="fadein" id="view"></canvas>
       <div id="ui_overlay"></div>
       <div id="ui" class="">
         <div id="left_side"></div>
         <div class="uibox">
-          <div class="logo"><img src="images/logo.png" /></div>
           <div class="tips"><div class="tip">Bite enemy tails but don't let them bite yours!</div></div>
           <form class="play"><input type="text" id="nick" name="nick" autocomplete="off" placeholder="Your name" maxlength="12" /><button id="play" name="play" class="yellow">PLAY</button></form>
-          <div id="adbanner"></div>
-        </div>
-        <div id="right_side">
-          <div class="own_banner">
-            <a href="https://topvaz.github.io/" target="_blank">Homepage</a>
-          </div>
         </div>
       </div>
       <div id="footer">
         <ul id="lng">
-          <li class="active">EN</li>
+          <li class="active">ES</li>
+          <li class="">EN</li>
           <li class="">RU</li>
           <li class="">TR</li>
-          <li class="">SP</li>
           <li class="">FR</li>
           <li class="">NL</li>
           <li class="">PT</li>
           <li class="">DE</li>
           <li class="">IT</li>
         </ul>
-        <div id="bottom"><a href="/" target="_blank">Homepage</a></div>
       </div>
       <div id="overlay"></div>
     </div>
