Update Full Page

--- a/index.html
+++ b/index.html
@@ -1,60 +1,45 @@
-<!DOCTYPE html>
-<html lang="es" dir="ltr">
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<title>Paper io 2 Unblocked</title>
-
-	<!-- CSS Stylesheets -->
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/jquery-comments.css">
-	<link rel="stylesheet" href="css/user.css">
-	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="css/custom.css">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
-</head>
-
-<body id="page-top" style="background: url('images/background1.png'); background-size: cover;">
-	<!-- Game Container -->
-	<div class="container">
-		<div class="row">
-			<!-- Game Display -->
-			<div class="col-md-10">
-				<div class="game-container">
-					<div class="game-content" data-id="169">
-						<div id="allow_mobile_version"></div>
-						<div class="game-iframe-container" id="game-player">
-							<div id="mobile-back-button" draggable="true">
-								<i class="bi bi-x-circle-fill"></i>
-							</div>
-							<iframe class="game-iframe" id="game-area" src="file/" scrolling="none" frameborder="0" allowfullscreen></iframe>
-						</div>
-					</div>
-
-					<!-- Game Info -->
-					<div class="game-info">
-						<div class="header-left">
-							<h1 class="single-title">Paper io 2 Unblocked</h1>
-						</div>
-						<div class="header-right">
-							<a href="#" onclick="open_fullscreen()" class="btn btn-capsule">
-								<i class="bi bi-arrows-fullscreen b-icon"></i>Fullscreen
-							</a>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	<!-- Scripts -->
-	<script src="js/jquery-3.6.2.min.js"></script>
-	<script src="js/lazysizes.min.js"></script>
-	<script src="js/popper.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/script.js"></script>
-	<script src="js/custom.js"></script>
-</body>
+<html>
+  <head>
+    <script id="gamemonetize-sdk" type="text/javascript" src="js/sdk.js"></script>
+    <meta charset="utf-8" />
+    <meta name="theme-color" content="#2d3331" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <meta name="robots" content="noindex,nofollow" />
+    <title>Paper.io 2 Unblocked</title>
+    <link rel="manifest" href="manifest.json" />
+    <link rel="stylesheet" href="css/fonts.css" />
+    <link rel="stylesheet" href="css/style3.css" />
+  </head>
+  <body>
+    <script type="text/javascript" src="/js/main.js"></script>
+    <script type="text/javascript" src="js/window.js"></script>
+    <script type="text/javascript" src="js/loader.js"></script>
+    <script type="text/javascript" src="js/app-new-gm.js?26"></script>
+    <div id="game">
+      <canvas class="fadein" id="view"></canvas>
+      <div id="ui_overlay"></div>
+      <div id="ui" class="">
+        <div id="left_side"></div>
+        <div class="uibox">
+          <div class="tips"><div class="tip">Bite enemy tails but don't let them bite yours!</div></div>
+          <form class="play"><input type="text" id="nick" name="nick" autocomplete="off" placeholder="Your name" maxlength="12" /><button id="play" name="play" class="yellow">PLAY</button></form>
+        </div>
+      </div>
+      <div id="footer">
+        <ul id="lng">
+          <li class="active">ES</li>
+          <li class="">EN</li>
+          <li class="">RU</li>
+          <li class="">TR</li>
+          <li class="">FR</li>
+          <li class="">NL</li>
+          <li class="">PT</li>
+          <li class="">DE</li>
+          <li class="">IT</li>
+        </ul>
+      </div>
+      <div id="overlay"></div>
+    </div>
+    <div id="imaContainer" style="position: absolute; z-index: 10000; top: 0px; left: 0px; width: 100%; height: 100%; background-color: rgb(0, 0, 0); visibility: hidden; overflow: hidden;"><video id="imaVideo"></video></div>
+  </body>
 </html>
