--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <script id="gamemonetize-sdk" type="text/javascript" src="js/sdk.js"></script>
     <meta charset="utf-8" />
+    <meta lang="es" />
     <meta name="theme-color" content="#2d3331" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <meta name="robots" content="noindex,nofollow" />
