--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
 <html>
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CFPCM8W1HZ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-CFPCM8W1HZ');
+    </script>
     <script id="gamemonetize-sdk" type="text/javascript" src="js/sdk.js"></script>
     <meta charset="utf-8" />
     <meta lang="es" />
