refactor: remove unused scripts and update index.html metadata
Removed unused JavaScript files (main.js, window.js) and cleaned up index.html by removing redundant script tags and updating metadata. Added Google Ads script and improved SEO with og:title and og:description tags. These changes improve maintainability and enhance the site's functionality and search engine visibility.

--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
     
       gtag('config', 'G-CFPCM8W1HZ');
     </script>
-    <script id="gamemonetize-sdk" type="text/javascript" src="js/sdk.js"></script>
+	<!-- Google Ads-->
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9210678565141466" crossorigin="anonymous"></script>
+	<!---->
     <meta charset="utf-8" />
     <meta lang="es" />
     <meta name="theme-color" content="#2d3331" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <meta name="robots" content="noindex,nofollow" />
+    <meta property="og:title" content="Paper.io 2 Unblocked" />
+    <meta property="og:description" content="¿Juega a Paper.io 2 en tu navegador sin bloqueos.!" />
     <title>Paper.io 2 Unblocked</title>
     <link rel="manifest" href="manifest.json" />
     <link rel="stylesheet" href="css/fonts.css" />
     <link rel="stylesheet" href="css/style3.css" />
   </head>
   <body>
-    <script type="text/javascript" src="/js/main.js"></script>
-    <script type="text/javascript" src="js/window.js"></script>
-    <script type="text/javascript" src="js/loader.js"></script>
     <script type="text/javascript" src="js/app-new-gm.js?26"></script>
     <div id="game">
       <canvas class="fadein" id="view"></canvas>
