--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <!-- Google tag (gtag.js) -->
@@ -17,7 +18,7 @@
     <meta name="theme-color" content="#2d3331" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <meta property="og:title" content="Paper.io 2 Unblocked" />
-    <meta property="og:description" content="¡Juega a Paper.io 2 en tu navegador sin bloqueos.!" />
+    <meta property="og:description" content="¡Juega a Paper.io 2 en tu navegador sin bloqueos!" />
     <title>Paper.io 2 Unblocked</title>
     <link rel="manifest" href="manifest.json" />
     <link rel="stylesheet" href="css/fonts.css" />
