update script path and add favicon

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     
       gtag('config', 'G-CFPCM8W1HZ');
     </script>
-	<!-- Google Ads-->
-	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9210678565141466" crossorigin="anonymous"></script>
-	<!---->
+	  <!-- Google Ads-->
+	  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9210678565141466" crossorigin="anonymous"></script>
+	  <!---->
+    <link rel="icon" href="images/icon192.png" type="image/png">
     <meta charset="utf-8" />
     <meta lang="es" />
     <meta name="theme-color" content="#2d3331" />
@@ -25,7 +26,7 @@
     <link rel="stylesheet" href="css/style3.css" />
   </head>
   <body>
-    <script type="text/javascript" src="js/app-new-gm.js?26"></script>
+    <script type="text/javascript" src="js/main.js?26"></script>
     <div id="game">
       <canvas class="fadein" id="view"></canvas>
       <div id="ui_overlay"></div>
