--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <meta property="og:title" content="Paper.io 2 Unblocked" />
     <meta property="og:description" content="¡Juega a Paper.io 2 en tu navegador sin bloqueos!" />
+    <meta property="og:image" content="images/icon192.png" />
     <title>Paper.io 2 Unblocked</title>
     <link rel="manifest" href="manifest.json" />
     <link rel="stylesheet" href="css/fonts.css" />
