Update Search Engine SEO, data and languages

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
   <head>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-CFPCM8W1HZ"></script>
@@ -14,9 +14,19 @@
 	  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9210678565141466" crossorigin="anonymous"></script>
 	  <!---->
     <link rel="icon" href="images/icon192.png" type="image/png">
+    <link rel="canonical" href="https://paperio-2-unblocked.github.io/" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <meta name="theme-color" content="#2d3331" />
+    
+    <!-- SEO Meta Tags -->
+    <meta name="robots" content="index, follow">
+    <meta name="keywords" content="paper.io 2, io games, online games, territory capture game, multiplayer games, browser games, unblocked games, paperio unblocked, clasroom games, paperio clasroom, ublocked">
+    <meta name="author" content="Paper.io 2">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="application-name" content="Paper.io 2">
+    <meta name="apple-mobile-web-app-title" content="Paper.io 2">
     
     <!-- Español -->
     <meta lang="es" />
@@ -60,6 +70,17 @@
     <link rel="manifest" href="manifest.json" />
     <link rel="stylesheet" href="css/fonts.css" />
     <link rel="stylesheet" href="css/style3.css" />
+    <script type="application/ld+json">
+    {
+      "@type": "VideoGame",
+      "name": "Paper.io 2",
+      "description": "An exciting IO game where players capture territory and compete with others",
+      "genre": ["Strategy", "Multiplayer", "Browser Game"],
+      "gamePlatform": "Web Browser",
+      "operatingSystem": "Any",
+      "applicationCategory": "Game"
+    }
+    </script>
   </head>
   <body>
     <script type="text/javascript" src="js/main.js?26"></script>
