--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     </script>
 	  <!-- Google Ads-->
 	  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9210678565141466" crossorigin="anonymous"></script>
+    <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="197c79fa-b5c1-4498-b0a1-e58f9f406ec1" type="text/javascript" async></script>
 	  <!---->
     <link rel="icon" href="images/icon192.png" type="image/png">
     <link rel="canonical" href="https://paperio-2-unblocked.github.io/" />
